@@ -1,0 +1,22 @@
+indep(__d, 1)	plot_vs(dBm(Vplus[::,1]), HB.Vtune)
+-1.00000000000000000E0	9.43203155558201270E0
+-5.00000000000000000E-1	1.04571904262087470E1
+0.00000000000000000E0	1.09774336364001980E1
+5.00000000000000000E-1	1.16269695741940730E1
+1.00000000000000000E0	1.21883183284983640E1
+1.50000000000000000E0	1.25855713891567560E1
+2.00000000000000000E0	1.27989148753563240E1
+2.50000000000000000E0	1.28572159500762820E1
+
+
+indep(__d, 1)	plot_vs(dBm(Vplus[::,1]), HB.Vtune)
+-1.00000000000000000E0	9.43203155558201270E0
+-5.00000000000000000E-1	1.04571904262087470E1
+0.00000000000000000E0	1.09774336364001980E1
+5.00000000000000000E-1	1.16269695741940730E1
+1.00000000000000000E0	1.21883183284983640E1
+1.50000000000000000E0	1.25855713891567560E1
+2.00000000000000000E0	1.27989148753563240E1
+2.50000000000000000E0	1.28572159500762820E1
+
+
